fucking simple paypal payment plugin customization: cart clear after page opened, cart table visible always, always product adds to cart at page opened, another PayNow button. Only one product at the cart !  Redirect to checkout by wp ajax

--- a/wp-content/plugins/wordpress-simple-paypal-shopping-cart/wp_shopping_cart_style.css
+++ b/wp-content/plugins/wordpress-simple-paypal-shopping-cart/wp_shopping_cart_style.css
@@ -153,4 +153,9 @@ text-decoration: none;
 color: #FFFFFF !important;
 text-decoration: none;
 }
+
+#checkOutButton{
+
+}
+
 /* End of compact cart 2 css */
